--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "prospect": "node prospect.js"
   },
   "dependencies": {
     "puppeteer": "^1.18.1"
